--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,10 @@ body {
     background-color: #fafafa;
 }
 
+.customMenu {
+    background-color: #404040;
+}
+
 .container {
     width: 100%;
     padding-right: 15px;
